--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -15,6 +15,9 @@
 
     <TextView
         android:id="@+id/tvTitle"
+
+        android:transitionName="moveTitle"
+
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -30,6 +33,9 @@
 
     <TextView
         android:id="@+id/tvOverview"
+
+        android:transitionName="movieOverview"
+
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
